--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,10 @@
     <string name="generoTile">Gênero</string>
     <string name="imagem_de_capa_do_filme">Imagem de capa do filme</string>
     <string name="save">Salvar</string>
+    <string name="ordenarName">Ordenar por Nome</string>
+    <string name="ordenarStarts">Ordenar por nota</string>
+    <string name="pesquisar">Pesquisar</string>
+    <string name="atualizar">Atualizar</string>
+    <string name="excluir">Deletar</string>
+    <string name="details_movie_view">Informações do filme</string>
 </resources>
